...
                    Button(role: .legacyConfirm) {
                        viewModel.saveEntry()
                        dismiss()
                    } label: {
                        Label(Strings.CreatePayout.NavigationBar.create, systemImage: "checkmark")
                    }
                    .accessibilityIdentifier("create-button")
                    .disabled(viewModel.isCreateButtonDisabled)
                }
            }
        }
        .onAppear(perform: viewModel.onAppear)
        .alert(Strings.CreatePayout.Alerts.EmptyPayout.title, isPresented: $viewModel.noEntriesShowing) {
...
