...
"GENERIC.EDIT" = "Edit";

"GENERIC.CANCEL" = "Cancel";

"CREATE_PAYOUT.FULL_PAYOUT" = "Full Payout";

"LIST.NAVIGATION_BAR.GENERATE" = "Generate";

"HISTORY.GRAPH_CONTENT" = "Graph Content";

"HISTORY.NAVIGATION_TITLE" = "History";

"CREATE_ENTRY.HOURLY_WAGE" = "Hourly wage";
...
